Fixing navbar z-index. Fixing parent rate save issue for rates.

--- a/Brizbee.Dashboard/wwwroot/css/merged.css
+++ b/Brizbee.Dashboard/wwwroot/css/merged.css
@@ -23,6 +23,10 @@ ol.breadcrumb {
     margin-right: 3px;
 }
 
+.navbar-fixed-top {
+    z-index: 999;
+}
+
 table.table-exceptions tr td label {
     margin: 0;
     font-weight: normal;
